--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatem excepturi accusantium quasi fuga pariatur ut exercitationem laboriosam, laudantium a libero architecto vel. Alias facilis nam illum blanditiis qui dicta!
-    </p>
-</body>
-</html>
 
+<body>
+    <div>
+        <p>Novo parágrafo para fins de teste</p>
+    </div>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatem excepturi accusantium quasi fuga
+        pariatur ut exercitationem laboriosam, laudantium a libero architecto vel. Alias facilis nam illum blanditiis
+        qui dicta!
+    </p>
+    <div>
+        <p>Parágrafo de teste</p>
+    </div>
+</body>
+
+</html>
