--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div>
         <p>Novo parágrafo para fins de teste</p>
     </div>
-    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatem excepturi accusantium quasi fuga
+    <hr>
+    <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. ESTOU TESTANDO MODIFICAÇÕES INTERNAS
+        Asperiores voluptatem excepturi accusantium quasi fuga
         pariatur ut exercitationem laboriosam, laudantium a libero architecto vel. Alias facilis nam illum blanditiis
         qui dicta!
     </p>
